# custerm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cliff.toml  install.sh  release.toml
.githooks/: pre-commit  pre-push
.github/workflows/: release.yml
custerm-cli/: Cargo.toml
custerm-cli/src/: client.rs  commands.rs  main.rs
custerm-core/: Cargo.toml
custerm-core/src/: background.rs  config.rs  error.rs  lib.rs  protocol.rs  pty.rs  state.rs
custerm-core/tests/: socket_protocol.rs
custerm-linux/: Cargo.toml
custerm-linux/src/: app.rs  dbus.rs  main.rs  search.rs  socket.rs  split.rs  tabs.rs  terminal.rs  webview.rs  window.rs
custerm-macos/: Package.swift
custerm-macos/Sources/Custerm/: CustermApp.swift
docs/: INDEX.md  architecture.md  cli.md  config.md  core-lib.md  decisions.md  gui-daemon-protocol.md  harness-hooks.md  harness-integration.md  kb-protocol.md  linux-app.md  macos-app.md  macos-parity-plan.md  macos-post-renderer-catchup.md  macos-renderer-migration-plan.md  plugins.md  roadmap.md  service-plugins.md  troubleshooting.md  workflow-runtime.md
examples/plugins/calendar/: plugin.toml  triggers.example.toml
examples/plugins/discord/: panel.html  triggers.example.toml
examples/plugins/git/: triggers.example.toml
examples/plugins/hello/: index.html  plugin.toml
examples/plugins/kb/: plugin.toml
examples/plugins/slack/: plugin.toml  triggers.example.toml
examples/plugins/todo/: panel.html  plugin.toml
examples/triggers/: claude-hooks.toml  hyprland-webkit-fix.toml  vision-flow-3.toml
nestty-cli/: Cargo.toml
nestty-cli/src/: client.rs  commands.rs  main.rs  update.rs
nestty-cli/src/plugin_cmds/: bookmark.rs  context.rs  git.rs  mod.rs  recent.rs  todo.rs
nestty-core/: Cargo.toml
nestty-core/src/: action_registry.rs  condition.rs  config.rs  context.rs  error.rs  event_bus.rs  fs_atomic.rs  lib.rs  paths.rs  plugin.rs  protocol.rs  trigger.rs
nestty-core/tests/: socket_protocol.rs
nestty-daemon/: Cargo.toml
nestty-daemon/src/: daemon_trigger_sink.rs  gui_registry.rs  lib.rs  main.rs  plugin_exec.rs  service_supervisor.rs  socket.rs  trigger_sink.rs
nestty-ffi/: Cargo.toml
nestty-ffi/src/: lib.rs
nestty-linux/: Cargo.toml  install.sh  nestty.desktop
nestty-linux/src/: app.rs  background.rs  command_palette.rs  daemon_forward.rs  gui_client.rs  main.rs  plugin_panel.rs  search.rs  service_supervisor.rs  session.rs  socket.rs  statusbar.rs  tabs.rs  terminal.rs  trigger_sink.rs  webview.rs  window.rs
nestty-macos/: Package.swift  run.sh
nestty-macos/Sources/CNesttyTerm/: dummy.c
nestty-macos/Sources/Nestty/: ActionRegistry.swift  AlacrittyTerminalViewController.swift  AppDelegate.swift  AutoSpawn.swift  Config.swift  ContextService.swift  DaemonClient.swift  EventBus.swift  (+14 more)
nestty-plugin-bookmark/: Cargo.toml
nestty-plugin-kb/: Cargo.toml
nestty-plugin-todo/: Cargo.toml
nestty-term/: Cargo.toml
nestty-term/src/: lib.rs
scripts/: e2e-daemon-client.sh  install-claude-hooks.sh  install-dev.sh  install-macos.sh  install-plugins.sh
turm-cli/: Cargo.toml
turm-cli/src/: commands.rs  main.rs
turm-core/: Cargo.toml
turm-core/src/: action_registry.rs  condition.rs  config.rs  error.rs  event_bus.rs  fs_atomic.rs  lib.rs  plugin.rs  trigger.rs
turm-ffi/: Cargo.toml
turm-ffi/src/: lib.rs
turm-linux/: Cargo.toml  build.rs
turm-linux/src/: app.rs  background.rs  cef_helper.rs  cef_init.rs  cef_panel.rs  cef_plugin_panel.rs  main.rs  panel.rs  plugin_panel.rs  service_supervisor.rs  socket.rs  statusbar.rs  tabs.rs  terminal.rs  trigger_sink.rs  webview.rs  window.rs
turm-macos/: Package.resolved  Package.swift  run.sh
turm-plugin-bookmark/: Cargo.toml
turm-plugin-bookmark/src/: main.rs  store.rs
turm-plugin-calendar/: Cargo.toml
turm-plugin-calendar/src/: config.rs  event.rs  gcal.rs  main.rs  oauth.rs  poller.rs  store.rs
turm-plugin-discord/src/: events.rs  gateway.rs
turm-plugin-echo/src/: main.rs
turm-plugin-git/src/: main.rs
turm-plugin-kb/: Cargo.toml
turm-plugin-kb/src/: kb.rs  main.rs
turm-plugin-llm/src/: config.rs  main.rs  store.rs
turm-plugin-slack/: Cargo.toml
turm-plugin-slack/src/: config.rs  events.rs  main.rs  socket_mode.rs  store.rs
turm-plugin-todo/: Cargo.toml
turm-plugin-todo/src/: main.rs  store.rs
(+44 files in other folders)
