[workspace]
resolver = "2"
members = [
    "turm-core",
    "turm-linux",
    "turm-cli",
    "turm-plugin-echo",
    "turm-plugin-kb",
    "turm-plugin-calendar",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform custom terminal emulator"
repository = "https://github.com/marshall/turm"
