[package]
name = "nestty-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless host daemon for nestty: trigger engine, action registry, event bus, plugin supervisor, socket server. GUI shells (nestty-linux, nestty-macos) and CLI (nestctl) connect via Unix socket."
repository.workspace = true

[[bin]]
name = "nesttyd"
path = "src/main.rs"

[lib]
name = "nestty_daemon"
path = "src/lib.rs"

[dependencies]
nestty-core = { path = "../nestty-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
