[package]
name = "nestty-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C-ABI bridge from nestty-core to platform UIs that can't link Rust directly (currently nestty-macos)."
repository.workspace = true

[lib]
name = "nestty_ffi"
# staticlib so libnestty_ffi.a embeds into Nestty.app at link time. cdylib would
# work too but adds a dylib distribution step; the spike stays simpler.
crate-type = ["staticlib"]

[dependencies]
serde_json = "1"
# nestty-core brings the TriggerEngine + ActionRegistry + EventBus types we
# expose through FFI. workspace-relative path so a single workspace cargo
# build wires both crates without duplication.
nestty-core = { path = "../nestty-core" }
