[package]
name = "turm-plugin-calendar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party Google Calendar service plugin for turm — emits calendar.event_imminent and provides read-only calendar.* actions."
repository.workspace = true

[[bin]]
name = "turm-plugin-calendar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "sync-secret-service",
    "crypto-rust",
] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
url = "2"

[dev-dependencies]
tempfile = "3"
