[package]
name = "turm-plugin-kb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party KB service plugin for turm — grep + filename search over ~/docs."
repository.workspace = true

[[bin]]
name = "turm-plugin-kb"
path = "src/main.rs"

[dependencies]
serde_json = "1"
libc = "0.2"
